--- a/task_schedule.cfg
+++ b/task_schedule.cfg
@@ -42,7 +42,7 @@ alert        jeanconn@head.cfa.harvard.edu
 <task vv_trend>
       cron       * * * * *
       check_cron * * * * *
-      exec 1: vv_trend.py
+      exec 1: vv_trend.py --outdir /proj/sot/ska/www/ASPECT/vv_rms/
       <check>
         <error>
           #    File           Expression
