Python package and remove old plots

--- a/vv_trend/task_schedule.cfg
+++ b/vv_trend/task_schedule.cfg
@@ -42,7 +42,8 @@ alert        jeanconn@head.cfa.harvard.edu
 <task vv_trend>
       cron       * * * * *
       check_cron * * * * *
-      exec 1: vv_trend.py --outdir /proj/sot/ska/www/ASPECT/vv_rms/
+      exec 1: vv_trend_update_plots --outdir /proj/sot/ska/www/ASPECT/vv_rms3
+      exec 1: vv_trend_copy_index --outdir /proj/sot/ska/www/ASPECT/vv_rms3
       <check>
         <error>
           #    File           Expression
