Update alert email to aca

--- a/vv_trend/task_schedule.cfg
+++ b/vv_trend/task_schedule.cfg
@@ -20,8 +20,8 @@ master_log   master.log             # Composite master log (created in log_dir)
 # running jobs (i.e. couldn't start jobs or couldn't open log file).
 # Processing errors *within* the jobs are caught with watch_cron_logs
 
-#alert       aca@head.cfa.harvard.edu
-alert        jeanconn@head.cfa.harvard.edu
+alert       aca@cfa.harvard.edu
+#alert        jeanconn@head.cfa.harvard.edu
 #notify	    jeanconn@head.cfa.harvard.edu
 
 # Define task parameters
